added main and bearin change handler scripts

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<div id="out"></div>
 		<img src="img/arr.png" id="arrow">
 	</div>
-	<script src="scripts/geo.js"></script>
-	<script src="scripts/locationWatcher.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/bearingChangeHandler.js"></script>
+	<!-- <script src="scripts/geo.js"></script> -->
+	<!-- <script src="scripts/locationWatcher.js"></script> -->
 	<!-- <script src="scripts/camera.js"></script> -->
 </body>
