added location change handler

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
 	<div style="position: absolute; top: 10px; width:100%; text-align: left; z-index: 2; background: transparent">
 		<div id="out"></div>
+		<div id="loc"></div>
 		<img src="img/arrow.png" id="arrow">
 	</div>
 	<script src="scripts/main.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
+	<script src="scripts/locationChangeHandler.js"></script>
 	<!-- <script src="scripts/geo.js"></script> -->
 	<!-- <script src="scripts/locationWatcher.js"></script> -->
 	<!-- <script src="scripts/camera.js"></script> -->
