--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div style="position: absolute; top: 10px; width:100%; text-align: left; z-index: 2; background: transparent">
 		<div id="out"></div>
 		<div id="loc"></div>
-		<img src="img/arrow.png" id="arrow">
+		<img src="img/arrow.png" style="height: 100px;" id="arrow">
 	</div>
 	<script src="scripts/main.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
