added geolocation helper, clearing scripts

--- a/index.html
+++ b/index.html
@@ -1,29 +1,15 @@
 
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-<!-- three.js library -->
-<script src='vendor/three.js/build/three.min.js'></script>
-<!-- ar.js -->
-<script src="build/ar.js"></script>
-<script>THREEx.ArToolkitContext.baseURL = '../'</script>
-<script src="scripts/geo.js"></script>
-
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
-	<!-- <div style='position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
-		<a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - three.js camera transform
-		<br/>
-		Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
-	</div> -->
-
 	<div style="position: absolute; top: 10px; width:100%; text-align: left; z-index: 2; background: transparent">
 		<div id="out"></div>
 		<div id="loc"></div>
 		<img src="img/arrow.png" style="height: 100px;" id="arrow">
 	</div>
 	<script src="scripts/main.js"></script>
+	<!-- source: https://github.com/Esri/html5-geolocation-tool-js -->
+	<script src="scripts/GeolocationHelper.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
 	<script src="scripts/locationChangeHandler.js"></script>
-	<!-- <script src="scripts/geo.js"></script> -->
-	<!-- <script src="scripts/locationWatcher.js"></script> -->
-	<!-- <script src="scripts/camera.js"></script> -->
 </body>
