--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	<div style="position: absolute; top: 10px; width:100%; text-align: left; z-index: 2; background: transparent">
 		<div id="out"></div>
 		<div id="loc"></div>
+		<div id="dir"></div>
 		<img src="img/arrow.png" style="height: 100px;" id="arrow">
 	</div>
 	<!-- source: https://github.com/Esri/html5-geolocation-tool-js -->
 	<script src="scripts/GeolocationHelper.js"></script>
+	<script src="scripts/geo.js"></script>
 	<script src="scripts/main.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
 	<script src="scripts/locationChangeHandler.js"></script>
