--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="scripts/GeolocationHelper.js"></script>
 	<script src="scripts/geo.js"></script>
 	<script src="scripts/main.js"></script>
+	<script src="scripts/xml.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
 	<script src="scripts/locationChangeHandler.js"></script>
 </body>
