added browser version check

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 	<div style="position: absolute; top: 10px; width:100%; text-align: left; z-index: 2; background: transparent">
+		<div id="browser"></div>
 		<div id="out"></div>
 		<div id="loc"></div>
 		<div id="dir"></div>
@@ -12,6 +13,8 @@
 	<script src="scripts/GeolocationHelper.js"></script>
 	<script src="scripts/geo.js"></script>
 	<script src="scripts/main.js"></script>
+	<!-- source: https://stackoverflow.com/questions/5916900/how-can-you-detect-the-version-of-a-browser -->
+	<script src="scripts/browserCheck.js"></script>
 	<script src="scripts/xml.js"></script>
 	<script src="scripts/bearingChangeHandler.js"></script>
 	<script src="scripts/locationChangeHandler.js"></script>
